# ModeloClasificacion

./: .env  .gitignore  README.md  config.py  pyproject.toml
documentacion/: CONFIGURACION-GPU.md
entrenamiento/: entrenar_modelo.ipynb
entrenamiento/model/: .gitkeep  ClasificadorDocumentos.pkl  info_modelo.pkl
scripts/: mover_txts.py  procesar_pdfs.py
